src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__file_labels_grow_outward.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                     north_file.rs█                            east_file.rs                       │"
"│                                   ███                         █                                  │"
"│                                      ████                    █                                   │"
"│                                          ███                 █                                   │"
"│                                             ███             █                                    │"
"│                                                ███          █                                    │"
"│                                                   ████     █                                     │"
"│                                                       ███  █                                     │"
"│                                                          ███[IMP] | #568                         │"
"│                                                       ███ █                                      │"
"│                                                   ████     █                                     │"
"│                                                ███         █                                     │"
"│                                             ███             █                                    │"
"│                                          ███                █                                    │"
"│                                      ████                    █                                   │"
"│                                   ███                        █                                   │"
"│                      west_file.rs█                            south_file.rs                      │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
