src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__agent_graph__file_node_marker_and_label_visually_connected.snap
---
source: src/tui/snapshot_tests/agent_graph.rs
expression: t.backend()
---
"┌ agent graph ─────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                          a.rs                                    │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                       b.rs██████████████████████████████████[IMP] | #569                         │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                                                           █                                      │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                          █                                       │"
"│                                                          c.rs                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
